--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-svg": "13.9.0"
+    "react-native-svg": "13.9.0",
+    "expo-image-picker": "~14.3.2",
+    "expo-file-system": "~15.4.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
