--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
   "dependencies": {
     "@expo-google-fonts/karla": "^0.2.3",
     "@expo/vector-icons": "^13.0.0",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
     "expo": "~49.0.15",
+    "expo-file-system": "~15.4.5",
     "expo-font": "~11.4.0",
+    "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-svg": "13.9.0",
-    "expo-image-picker": "~14.3.2",
-    "expo-file-system": "~15.4.5"
+    "react-native-svg": "13.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
